# llm_serving

./: CLAUDE.md  LICENSE  README.md  chat_cli.py  client_test.py  planning.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  standalone_test.py
app/: main.py
app/api/: endpoints.py
app/core/: config.py  logging.py
app/models/: chat_manager.py  conversation.py  model_manager.py  schemas.py
app/rag/: document_processor.py  document_store.py  embeddings.py  vector_store.py
app/voice/: __init__.py  manager.py  recorder.py  transcriber.py
mobile_app/: App.tsx  README.md  app.json  package.json  setup.sh  tsconfig.json
mobile_app/src/components/: ErrorMessage.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageInput.tsx  ModelStatusIndicator.tsx  TypingIndicator.tsx
mobile_app/src/context/: AppContext.tsx
mobile_app/src/navigation/: AppNavigator.tsx
mobile_app/src/screens/: ChatScreen.tsx  ModelsScreen.tsx  SettingsScreen.tsx
mobile_app/src/services/: ApiService.ts
mobile_app/src/types/: index.ts
mobile_app/src/utils/: StorageService.ts  responsive.ts  theme.ts
tests/: standalone_test.py  test_api.py  test_chat.py  test_rag_config.py  test_voice_integration.py
