[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-serving"
version = "1.0.0"
description = "A FastAPI server for local LLM inference"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "LLM Serving Team"},
]
keywords = ["llm", "fastapi", "transformers", "gpt2", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core API Framework
    "fastapi",
    "uvicorn[standard]",
    
    # Machine Learning Libraries
    "torch",
    "transformers",
    "tokenizers",
    
    # Data Validation and Serialization
    "pydantic",
    "pydantic-settings",
    
    # Utilities
    "python-multipart",
    "aiofiles",
    
    # Logging and Monitoring
    "structlog",
]

[project.optional-dependencies]
dev = [
    # Development and Testing
    "pytest",
    "httpx",
    "pytest-asyncio",
    
    # Code Quality
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/your-org/llm-serving"
Documentation = "https://github.com/your-org/llm-serving#readme"
Repository = "https://github.com/your-org/llm-serving.git"
Issues = "https://github.com/your-org/llm-serving/issues"

[project.scripts]
llm-serve = "app.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"